backend/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: backend-api
  ports:
    - port: 4000
      targetPort: 4000
